3.31	update isIdValid() to dbIsValid() for DBI changes.

	explicitly :: or import ALL THE THINGS.


3.30-4  svypredmeans() does the same things (together with svycontrast()) as
        as PREDMARG in SUDAAN (for Thomas Yokota and Anthony Damico)

3.30-4  confint.svystat was handling denominator degrees of freedom wrongly
	for the Wald method (Jared Smith)

3.30-3  vcov.svrepstat does more sensible things when covariances aren't
        estimated (eg for quantiles). This fixes issues with svyby

        dropped support for old version of hexbin


3.30-1  Fix example(svyplot) now that "hexbin" package no longer loads
        grid package

3.30	svyranktest() now allows k-sample tests (eg Kruskal-Wallis)

        svylogrank() does the generalised G-rho-gamma logrank tests
        [methods from Rader and Lipsitz (and probably al)]

	various CRAN fixes

3.29-9 	AIC.svyglm, based on Rao-Scott approximation
     	BIC.svyglm, based on multivariate Gaussian likelihood for coefficients

        svyglm.svyrep.design checks values are finite before replicating

        calibrate() using a list of margins now allows named vectors for 1-d margins

3.29-8  svyhist(freq=TRUE) works with replicate-weight designs (for Ward Kinkade)

3.29-7  svyranktest() works with replicate-weight designs (for Matthew Soldner)

        reference to the lavaan.survey package in ?svyfactanal

3.29-6  svyby() now always includes within-domain covariances

3.29-5  Change from multicore to parallel.  
	Parallel processing is now only available with R >=2.14

	ddf argument really works now in confint.svyglm (Anthony Damico)

	colour specification in plot.svykmlist now works (Mark Rosenstein)

        svyplot() documentation explains how to annotate a hexbin plot

3.29-4  add symmetric=TRUE to eigenvalue calculation in anova.svyloglin,
	to improve numerical stability

	subset.svyimputationList now allows the subsets to end up with 
 	different observations in them (for Anthony Damico)
