@@ -365,7 +365,7 @@ svrepdesign.character<-function (variables=NULL,repweights=NULL, weights=NULL,
   rval<-svrepdesign(variables=variables,repweights=repweights, weights=weights, type=type,
                     data=design.data,
                     combined.weights=combined.weights, rho=rho, bootstrap.average=NULL,
-                    scale=scale,rscales=rscales,fpc=fpc, fpctype=c("fraction","correction"))
+                    scale=scale,rscales=rscales,fpc=fpc, fpctype=c("fraction","correction"), mse=mse)
   
   rval$db<-list(dbname=dbname, tablename=data, connection=dbconn, dbtype=dbtype)
   rval$variables<-NULL
