@@ -72,6 +72,7 @@ calibrate.survey.design2<-function(design, formula, population,
     mm<-mm[,!zz]
     population<-population[!zz]
     sample.total<-sample.total[!zz]
+    if (length(epsilon)>1) epsilon <- epsilon[!zz]
   }
 
     
@@ -187,6 +188,7 @@ calibrate.svyrep.design<-function(design, formula, population,compress=NA,
     mm<-mm[,!zz]
     population<-population[!zz]
     sample.total<-sample.total[!zz]
+    if (length(epsilon)>1) epsilon <- epsilon[!zz]
   }
   
     
