@@ -2,6 +2,16 @@
 
 	explicitly :: or import ALL THE THINGS.
 
+	mse option for svrepdesign.character and svyrepdesign.imputationList was ignored (Antony Damico)
+
+	confint works on output of svycontrast (for Michael Laviolette)
+
+	denominator df fixed in confint.svyglm (Joey Morris)
+
+	svyboxplot rule for which lower-tail points are outliers was wrong (David Collins)
+
+	calibrate() with variable-specific epsilons and zero sample totals didn't work (Alex Kowarik)
+
 
 3.30-4  svypredmeans() does the same things (together with svycontrast()) as
         as PREDMARG in SUDAAN (for Thomas Yokota and Anthony Damico)
